# rs-pgtables2ql

./: Cargo.toml  README.md
examples/api/pgtables2ql/: Cargo.toml  build.sh  example.sh  pg-tables.graphql  pgtables2ql
examples/api/pgtables2ql/src/: main.rs
src/: lib.rs
