[package]
name = "rs-pgtables2ql"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.async-graphql]
version = "7.0.17"
default-features = false
features = [
	"graphiql",
	"playground",
]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
	"macros",
	"postgres",
	"runtime-tokio",
]
